manifest/objects/mkto_si__Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integration Logs</relationshipLabel>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_si__Duration_Formatted__c</fullName>
        <formula>LPAD(TEXT(FLOOR( mkto_si__Duration__c / (60 * 60 * 1000))),2,&quot;0&quot;) &amp; &quot;:&quot; &amp; LPAD(TEXT(FLOOR(MOD((mkto_si__Duration__c / (60 * 1000)),60))),2,&quot;0&quot;) &amp; &quot;:&quot; &amp; LPAD(TEXT(FLOOR(MOD(mkto_si__Duration__c / 1000,60))),2,&quot;0&quot;) &amp; &quot;.&quot; &amp; LPAD(TEXT(FLOOR(MOD(mkto_si__Duration__c,1000))),3,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Duration__c</fullName>
        <label>Duration ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Flag_Duration__c</fullName>
        <formula>if(mkto_si__Duration__c &lt;= 3000,IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; TEXT(ROUND(mkto_si__Duration__c/1000,2)) &amp; &quot;s&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=45&amp;vp=20&amp;w=60&amp;h=60&amp;c=11&amp;bgt=unicolored&amp;bgc=38761d&quot;,&quot;Good&quot;,60,60),
			IF(mkto_si__Duration__c &lt;= 5000, IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; TEXT(ROUND(mkto_si__Duration__c/1000,2)) &amp; &quot;s&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=45&amp;vp=20&amp;w=60&amp;h=60&amp;c=11&amp;bgt=unicolored&amp;bgc=f1c232&quot;,&quot;Fair&quot;,60,60),
						IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; TEXT(ROUND(mkto_si__Duration__c/1000,2)) &amp; &quot;s&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=45&amp;vp=20&amp;w=60&amp;h=60&amp;c=11&amp;bgt=unicolored&amp;bgc=990000&quot;,&quot;Good&quot;,60,60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anything below 3secs is considered a good time</inlineHelpText>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Flag_Method__c</fullName>
        <formula>IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; TEXT(mkto_si__Method__c) &amp; &quot;&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=20&amp;vp=20&amp;c=11&amp;bgt=unicolored&amp;bgc=3d85c6&quot;,TEXT(mkto_si__Method__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Flag_Module__c</fullName>
        <formula>IMAGE(&quot;https://dabuttonfactory.com/button.png?t=&quot; &amp; mkto_si__Module_High_Level__c &amp; &quot;&amp;f=Open+Sans-Bold&amp;ts=20&amp;tc=fff&amp;hp=20&amp;vp=20&amp;c=11&amp;bgt=unicolored&amp;bgc=3d85c6&quot;,mkto_si__Module_High_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Flag_Status__c</fullName>
        <formula>if( mkto_si__Successful__c, IMAGE(&quot;https://login.salesforce.com/logos/Standard/task/logo.svg&quot;, &quot;OK&quot;, 60,60),IMAGE(&quot;https://login.salesforce.com/logos/Custom/Flag_Red/logo.png&quot;, &quot;Error&quot;,60,60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Platform Event</fullName>
                    <label>&gt;Platform Event</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_si__Module_High_Level__c</fullName>
        <formula>IF(CONTAINS(TEXT(mkto_si__Module__c),&quot;:&quot;), MID(TEXT(mkto_si__Module__c),0,FIND(&quot;:&quot;, TEXT(mkto_si__Module__c)) - 1), TEXT(mkto_si__Module__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Module</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_si__Origin_Data__c</fullName>
        <label>Origin Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Parent_Integration_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Integration Log</label>
        <referenceTo>mkto_si__Integration_Log__c</referenceTo>
        <relationshipLabel>Children Integration Logs</relationshipLabel>
        <relationshipName>Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Quiddity__c</fullName>
        <label>Quiddity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Record_Ids__c</fullName>
        <label>Record Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Request_Agent__c</fullName>
        <label>Request Agent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Request_Body_2__c</fullName>
        <label>Request Body 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Request_Body_3__c</fullName>
        <label>Request Body 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Request_Headers__c</fullName>
        <label>Request Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Request_Id__c</fullName>
        <externalId>true</externalId>
        <label>Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Response_Body_2__c</fullName>
        <label>Response Body 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Response_Body_3__c</fullName>
        <label>Response Body 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Response_Headers__c</fullName>
        <label>Response Headers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Response_StatusCode__c</fullName>
        <label>Response Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Retry_Data__c</fullName>
        <label>Retry Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Retry_Number__c</fullName>
        <label>Retry #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Successful</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>mkto_si__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>